--- a/aoc2018/.gitignore
+++ b/aoc2018/.gitignore
@@ -1,1 +1,17 @@
 .idea
+*.class
+
+### SBT ###
+# Simple Build Tool
+# http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
+
+scala/dist/*
+scala/target/
+scala/lib_managed/
+scala/src_managed/
+scala/project/boot/
+scala/project/plugins/project/
+scala/.history
+scala/.cache
+scala/.lib/
+scala/project/target
